--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,24 @@ background: linear-gradient(90deg,rgba(205, 92, 122, 0.436)   0%, rgba(245, 246,
     margin: 20px;
 }
 
+@media only screen and ( max-width: 1023px){
 
+    .botones button{
+        padding: 30px;
+        width: 160px;
+        margin:50px;
+        border-radius: 40px;
+        font-size: 17px;
+    
+    }
+    .figure{
+        height: auto;
+    }
+    .figureManga{
+        height: auto;
+    }
+
+}
 @media only screen and ( max-width: 900px){
 
     .botones button{
