--- a/styles.css
+++ b/styles.css
@@ -41,10 +41,12 @@ header div img{
     
 }
 .botones button{
+    color: black;
     padding: 30px;
     width: 200px;
     margin:50px;
     border-radius: 40px;
+    border-color: grey;
     font-size: 20px;
     background: rgb(195,40,34);
 background: linear-gradient(0deg, rgba(195,40,34,1) 0%, rgba(255,255,255,1) 99%);
